@@ -29,6 +29,7 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
 - Read compare_report.txt
 - Compare output now stages to `<diffOut>.stage` and finalizes atomically to `<diffOut>` after lint/write checks.
 - Safety guard: `<diffOut>` must be different from both input roots.
+- Compare `operator_receipt.json` now references `compare_receipt.json`, `compare_report.txt`, and `weftend/README.txt` for complete compare evidence linkage.
 
 3.1) Universal artifact adapter lane (CLI)
 - List adapter coverage:
